[metadata]
name = django-PyADCSConnector
version = 1.0.1
description = ADCS Connector for CZERTAINLY platform
long_description = file: README.rst
url = https://www.czertainly.com/
author = CZERTAINLY
author_email = info@czertainly.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.12
install_requires =
    Django==5.0
    asgiref==3.7.2
    certifi==2024.2.2
    cffi==1.16.0
    charset-normalizer==3.3.2
    cryptography==41.0.7
    decorator==5.1.1
    django-environ==0.11.2
    djangorestframework==3.14.0
    gssapi==1.8.3
    gunicorn==21.2.0
    idna==3.6
    krb5==0.5.1
    packaging==23.2
    pip==23.3.2
    psycopg2-binary==2.9.9
    pycparser==2.21
    pyspnego==0.10.2
    pytz==2023.3.post1
    pywinrm==0.4.3
    requests==2.31.0
    requests-credssp==2.0.0
    requests-kerberos==0.14.0
    requests-ntlm==1.2.0
    setuptools~=69.0.3
    six==1.16.0
    sqlparse==0.4.4
    urllib3==2.1.0
    xmltodict==0.13.0
