[metadata]
name = django-PyADCSConnector
version = 1.1.1
description = ADCS Connector for CZERTAINLY platform
long_description = file: README.rst
url = https://www.czertainly.com/
author = CZERTAINLY
author_email = info@czertainly.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.12
install_requires =
    Django==5.0.6
    asgiref==3.8.1
    asn1crypto==1.5.1
    certifi==2024.7.4
    cffi==1.16.0
    charset-normalizer==3.3.2
    cryptography==42.0.8
    decorator==5.1.1
    django-environ==0.11.2
    djangorestframework==3.15.2
    gssapi==1.8.3
    gunicorn==22.0.0
    idna==3.7
    krb5==0.5.1
    packaging==24.1
    pip==24.1.1
    psycopg2-binary==2.9.9
    pycparser==2.22
    pyspnego==0.11.0
    pytz==2024.1
    pywinrm==0.4.3
    requests==2.32.3
    requests-credssp==2.0.0
    requests-kerberos==0.15.0
    setuptools~=70.2.0
    six==1.16.0
    sqlparse==0.5.1
    urllib3==2.2.2
    xmltodict==0.13.0
