[metadata]
name = django-PyADCSConnector
version = 1.1.6
description = ADCS Connector for CZERTAINLY platform
long_description = file: README.rst
url = https://www.czertainly.com/
author = CZERTAINLY
author_email = info@czertainly.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.12
install_requires =
    Django==5.2.4
    asgiref==3.9.1
    asn1crypto==1.5.1
    certifi==2025.7.14
    cffi==1.17.1
    charset-normalizer==3.4.3
    cryptography==45.0.5
    decorator==5.2.1
    django-environ==0.12.0
    djangorestframework==3.16.0
    gssapi==1.9.0
    gunicorn==23.0.0
    idna==3.10
    krb5==0.7.1
    packaging==25.0
    pip==25.1.1
    psycopg2-binary==2.9.10
    pycparser==2.22
    pyspnego==0.11.2
    pytz==2025.2
    pywinrm==0.5.0
    requests==2.32.4
    requests-credssp==2.0.0
    requests-kerberos==0.15.0
    setuptools~=80.9.0
    six==1.17.0
    sqlparse==0.5.3
    urllib3==2.5.0
    xmltodict==0.14.2
